vivi.core changes
=================

4.52.2 (unreleased)
-------------------

- BUG-1392: Avoid PIL resize with 0 values


4.52.1 (2021-04-29)
-------------------

- MAINT: Add feature toggle 'show_automatic_type_in_topicbox'


4.52.0 (2021-04-27)
-------------------

- ZON-5576: Add automatic sources to article topicbox modules


4.51.1 (2021-04-26)
-------------------

- MAINT: Exclude JSON objects from SEO filename rules


4.51.0 (2021-04-23)
-------------------

- ZON-6637: Introduce JSON content object

- ZON-6377: Fix rendering of teaser images with `fill_color=None` parameters


4.50.6 (2021-04-21)
-------------------

- ZON-6614: Support caching time attribute on centerpages


4.50.5 (2021-04-08)
-------------------

- STO-185: Cache content & DAV properties based on file modification times


4.50.4 (2021-04-07)
-------------------

- ZON-6573: Support legal_text attribute on newslettersignups


4.50.3 (2021-03-30)
-------------------

- OPS-1684: Avoid zero division on image ratio calculations

- FIX: Ignore XML comments when parsing article modules


4.50.2 (2021-03-22)
-------------------

- ZON-6478: Follow up, refactor existing_teasers attribute for CP ContentQueries


4.50.1 (2021-03-17)
-------------------

- ZON-6521: Support theme in liveblogs


4.50.0 (2021-03-16)
-------------------

- ZON-6478: Move content query functionality to its own module

- BUG-1250: Hide no more needed 'external' author checkbox


4.49.2 (2021-03-10)
-------------------

- BUG-1366: Make sorting volume listings work again for py3


4.49.1 (2021-03-10)
-------------------

- ZON-6346: Make tickaroo liveblog status required

- BUG-1311: Show "steal lock" button only if user has the required permission

- BUG-1366: Make sorting listings work again for py3


4.49.0 (2021-02-24)
-------------------

- MAINT: Add status code to retresco TechnicalError


4.48.8 (2021-02-10)
-------------------

- ZON-6383: Handle Markdown using python libraries
